<resources>
    <string name="app_name">GawiBawiBo</string>
    <string name="gawi"> Gawi </string>
    <string name="bawi"> Bawi </string>
    <string name="bo"> Bo </string>
    <string name="player"> Player </string>
    <string name="computer"> Computer </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>